<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".Registro">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/parte_de_arriba_registro"
        android:orientation="horizontal">
        
        
        <TextView
            android:id="@+id/tituloapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_weight="70"
            android:gravity="center"
            android:text="@string/Registro"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="23sp"
             >

        </TextView>
        
        
    </LinearLayout>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
         android:gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cuadro_registro"
        android:ems="10"
        android:hint="@string/txtNombre">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
         android:gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress" 
        android:background="@drawable/cuadro_registro"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
         android:gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
       	android:background="@drawable/cuadro_registro"
        android:ems="10"
        android:hint="@string/txtContrasena"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/cuadro_registro"
        android:ems="10"
        android:hint="@string/txtTelefono"
        android:inputType="number" />
    
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/boton_registro" />

</LinearLayout>
